--- a/AnkiGame/app/src/main/AndroidManifest.xml
+++ b/AnkiGame/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.keemsa.boilerplate">
+    package="com.keemsa.ankigame2048">
 
     <application
-        android:name=".BoilerplateApplication"
+        android:name=".Ankigame2048Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
