--- a/AnkiAnalysis/package.json
+++ b/AnkiAnalysis/package.json
@@ -11,5 +11,15 @@
   "dependencies": {
     "firebase": "^5.2.0",
     "firebase-admin": "^5.12.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-react": "^3.1.0",
+    "gulp-sass": "^4.0.1"
   }
 }
